# Bevy_Pose_Estimation

./: Cargo.toml  model_info.txt  pestimation.py  pmodel.py  ptesting.py
src/: main.rs
